Remove unused item components and related traits
Completely removes several item components, traits, and adapters related to item metadata (e.g., material, rarity, lore, etc.) and serialization/deserialization. These appear to be unused or obsolete, simplifying the codebase and reducing maintenance complexity.